# FinAssistant

AI/: App.py  categories.txt  current_training_data.csv  data.csv  my_model.keras
Finassistant/: .env  db.sqlite3  docker-compose.yml  dockerfile  entrypoint.sh  manage.py  pyproject.toml
Finassistant/Finassistant/: asgi.py  settings.py  urls.py  wsgi.py
Finassistant/api/: admin.py  models.py  serializers.py  urls.py  views.py
Finassistant/api/migrations/: 0001_initial.py  0002_alter_transaction_balance_alter_transaction_category_and_more.py  0003_alter_transaction_options_and_more.py  0004_transaction_deposit_amount_and_more.py  0005_transaction_description.py
MLCI/: index.html  package-lock.json  package.json
MLCI/src/: App.jsx  App.module.css  index.css  main.jsx
